# swupdate-noticed

./: .gitignore  CMakeLists.txt  moc_upgradewindow.cpp  qml.qrc  swupdate_upgrade.pro  upgradewindow.h
qml/: NormalProgressBar.qml  UpgradeWindows.qml  main.qml
src/: CMakeLists.txt  main.cpp  swupdateapp.cpp  swupdateapp.h  swupdateui.cpp  swupdateui.h  upgradewindows.cpp  upgradewindows.h
src/qml/: main.qml
src/translations/: SWUpdateNoticed_zh_CN.ts
